--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "puredat-timestamp-many",
   "main": "puredat-timestamp-many.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
+    "polymer": "Polymer/polymer#^1.6.0",
     "moment": "^2.20.1"
   },
   "devDependencies": {
@@ -10,7 +10,15 @@
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
     "web-component-tester": "^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "puredat-timestamp": "puredat/puredat-timestamp",
-    "puredat-paper-input-autocomplete-chips": "puredat/puredat-paper-input-autocomplete-chips"
+    "paper-date-picker": "bendavis78/paper-date-picker#~1.2.2",
+    "paper-time-picker": "bendavis78/paper-time-picker#~1.1.5",
+    "paper-input": "PolymerElements/paper-input#~1.1",
+    "paper-button": "PolymerElements/paper-button#~1.0",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.1",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#~1.1",
+    "iron-a11y-keys": "PolymerElements/iron-a11y-keys#~1.0",
+    "puredat-paper-input-autocomplete-chips": "puredat/puredat-paper-input-autocomplete-chips",
+    "paper-icon-button": "PolymerElements/paper-icon-button",
+    "puredat-timestamp": "puredat/puredat-timestamp"
   }
 }
